fix margin on mobile devices

--- a/css/base.css
+++ b/css/base.css
@@ -50,11 +50,7 @@ a {
   flex: 1;
 }
 
-/*.content{
-  display: inline;
-  width: 90%;
-  margin: auto;
-}*/
+
 
 /* --------------------------
   Media Queries
@@ -65,15 +61,18 @@ a {
 		margin-top: 4em;
 	}
 	p {
-		-webkit-column-count: 2;
+		-webkit-column-count: 1;
 		-webkit-column-gap: 2.5em;
 
-		-moz-column-count: 2;
+		-moz-column-count: 1;
 		-moz-column-gap: 2.5em;
 
-		column-count: 2;
+		column-count: 1;
 		column-gap: 2.5em;
 	}
+  .page-content{
+    margin-top: 16vh;
+  }
 }
 @media (min-width: 1200px) {
 	.container {
@@ -86,8 +85,8 @@ a {
 		width: 1200px;
 	}
   img {
-    max-width: 1100px;
-    max-height: 1100px;
+    max-width: 1000px;
+    max-height: 1000px;
   }
 }
 /*slider dots*/
